--- a/TEXT_template/FrontBackmatter/Frontespizio.tex
+++ b/TEXT_template/FrontBackmatter/Frontespizio.tex
@@ -42,7 +42,8 @@
 		\medskip\spacedlowsmallcaps{\mySupervisor}
 
 		\flushleft
-		\normalsize{Assistant Supervisor:}\\
+		%\normalsize{Assistant Supervisor:}\\
+		\normalsize{Co-Supervisor:}\\
 		\medskip\spacedlowsmallcaps{\myOtherSupervisor}\\
 		%comment if there is another supervisor
 		%\flushleft
