--- a/TEXT_template/Davide_Master_Thesis.tex
+++ b/TEXT_template/Davide_Master_Thesis.tex
@@ -35,7 +35,7 @@
 %    * See classicthesis-preamble.sty for useful commands
 % ****************************************************************
 
-\documentclass[ twoside, 
+\documentclass[ %twoside, 
 			openright,
 			% letterpaper a4paper
 			titlepage, 
@@ -123,7 +123,8 @@
 	\include{Chapters/Introduction}  
 	\include{Chapters/State_Of_The_Art} 
 	\include{Chapters/xSpark} 
-	\include{Chapters/Methodology} 
+	%\include{Chapters/Methodology} 
+	\include{Chapters/ProblemAndSolution} 
 	\include{Chapters/Implementation} 
 	\include{Chapters/Evaluation} 
 	\include{Chapters/Conclusion} 
