--- a/TEXT_template/Bibliography.bib
+++ b/TEXT_template/Bibliography.bib
@@ -898,6 +898,37 @@
 	publisher={ACM}
 }
 
+@misc{AzureVMsizes,
+	title = {Virtual machine sizes for Azure Cloud services.},
+	howpublished = {\url{https://docs.microsoft.com/en- us/azure/cloud-services/cloudservices-sizes-specs\#dv2-series}},
+	year = {2019}
+}
+
+@misc{AzureVM,
+	title = {Micorosft Azure Virtual Machines.},
+	howpublished = {\url{https://azure.microsoft.com/en-us/services/virtual-machines/}},
+	year = {2019}
+}
+
+@misc{AzureBlobStorage,
+	title = {Microsoft Azure Blob Storage.},
+	howpublished = {\url{https://azure.microsoft.com/en-us/services/storage/blobs/}},
+	year = {2019}
+}
+
+@misc{Ubuntu,
+	title = {Ubuntu 14.04.5 LTS (Trusty Tahr).},
+	howpublished = {\url{http://releases.ubuntu.com/14.04/}},
+	year = {2019}
+}
+
+@misc{Java8,
+	title = {Java 8.},
+	howpublished = {\url{http://www.oracle.com/technetwork/java/javase/overview/java8-2100321.html.}},
+	year = {2019}
+}
+
+
 @misc{SparkDynamic,
 	title = {Spark - Dynamic Resource Allocation },
 	howpublished = {\url{https://spark.apache.org/docs/latest/job-scheduling.html\#dynamic-resource-allocation}},
@@ -2396,7 +2427,7 @@
 @misc{Hadoop,
 	title = {{Apache Hadoop}},
 	howpublished = {\url{http://hadoop.apache.org}},
-	year = {2017}
+	year = {2019}
 }
 
 @misc{RackSpace2015,
