--- a/TEXT_template/Davide_Master_Thesis.tex
+++ b/TEXT_template/Davide_Master_Thesis.tex
@@ -95,7 +95,7 @@
 	% \include{FrontBackmatter/Copertina}
 	\include{FrontBackmatter/Frontespizio}
 	% \include{FrontBackmatter/FrontespizioIT}
-	\include{FrontBackmatter/RetroFrontespizio} % a.k.a. the colophon
+	%\include{FrontBackmatter/RetroFrontespizio} % a.k.a. the colophon
 	\cleardoublepage\include{FrontBackmatter/Dedication}
 	% \cleardoublepage\include{FrontBackmatter/Publication}
 	\cleardoublepage\include{FrontBackmatter/Acknowledgments}
