--- a/TEXT_template/Bibliography.bib
+++ b/TEXT_template/Bibliography.bib
@@ -904,6 +904,12 @@
 	year = {2019}
 }
 
+@misc{Azure,
+	title = {Micorosft Azure.},
+	howpublished = {\url{https://azure.microsoft.com/en-us/}},
+	year = {2019}
+}
+
 @misc{AzureVM,
 	title = {Micorosft Azure Virtual Machines.},
 	howpublished = {\url{https://azure.microsoft.com/en-us/services/virtual-machines/}},
