--- a/TEXT_template/Bibliography.bib
+++ b/TEXT_template/Bibliography.bib
@@ -935,7 +935,7 @@
 }
 
 
-@misc{SparkDynamic,
+@misc{SparkDynamic
 	title = {Spark - Dynamic Resource Allocation },
 	howpublished = {\url{https://spark.apache.org/docs/latest/job-scheduling.html\#dynamic-resource-allocation}},
 	year = {2017}
@@ -2263,6 +2263,12 @@
 	
 	year = {2011},
 	author = {Sean Marston and Zhi Li and Subhajyoti Bandyopadhyay and Juheng Zhang and Anand Ghalsasi}
+}
+
+@misc{Gartner,
+	title = {{Gartner}},
+	howpublished = {\url{https://www.gartner.com/en}},
+	year = {2019}
 }
 
 @misc{Gartner2016,
@@ -4749,7 +4755,7 @@
 	year = {2017}
 }
 
-@misc{SparkDynamic,
+@misc{SparkDynamicResAllocFeatureReq,
 	title = {{Spark - Dynamic Resource Allocation Feature Request}},
 	howpublished = {\url{https://issues.apache.org/jira/browse/SPARK-3174}},
 	year = {2017}
