--- a/TEXT_template/Bibliography.bib
+++ b/TEXT_template/Bibliography.bib
@@ -70,6 +70,12 @@
 	year = {2019}
 }
 
+@misc{misc:IDC,
+	title = {IDC.},
+	url = {https://www.idc.com/},
+	year = {2019}
+}
+
 @misc{WhatIsBigData,
 	title = {What is Big Data},
 	howpublished = {https://www.oracle.com/big-data/guide/what-is-big-data.html},
