--- a/TEXT_template/Davide_Master_Thesis.tex
+++ b/TEXT_template/Davide_Master_Thesis.tex
@@ -133,9 +133,9 @@
 	% Backmatter
 	%*************************************************************
 	\cleardoublepage\include{FrontBackmatter/AutoParts/Bibliography}
-	\appendix
+	%\appendix
 	% \cleardoublepage\part{Appendix}
-	\include{Chapters/Code_listings}
+	%\include{Chapters/Code_listings}
 
 \end{document}
 % ****************************************************************
