--- a/TEXT_template/FrontBackmatter/Acknowledgments.tex
+++ b/TEXT_template/FrontBackmatter/Acknowledgments.tex
@@ -10,8 +10,15 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-Here you can put acknowledgements to people that helped you during the thesis. Remember that helping students to write thesis is part of the job of some of them, and they're also paid for that. Please make sure to thank them for what they weren't supposed to do.
-
-Remember also that this page is part of your thesis. I know that your boyfriend/girlfriend is very important to you and you cannot live without her/him, as it is for me. But there's no need to put her/his name here unless she/he gave a proper contribution to this work. Same goes for friends, parents, drinking buddies and so on.
+Voglio ringraziare chi mi ha seguito nella stesura di questa tesi
+cioè il relatore Prof. Luciano Baresi e il correlatore Dr. Giovanni
+Quattrocchi, che si sono dimostrati disponibili, pazienti e prodighi
+di consigli. 
+Voglio anche ringraziare la mia famiglia: mia moglie Egidia, i miei 
+figli Fabio e Anna ai quali ho sottratto attenzioni e tempo che ho dedicato
+allo studio. Senza il loro sacrificio e supporto non sarei sicuramente
+riuscito a concludere questo mio impegno. 
+Vi ringrazio di cuore!
+Davide
 
 \endgroup
