--- a/TEXT_template/FrontBackmatter/Acronyms.tex
+++ b/TEXT_template/FrontBackmatter/Acronyms.tex
@@ -8,3 +8,30 @@
     	\acro{OS}{operating system}
          \acro{XML}{eXtensible Markup Language}
     \end{acronym}
+\begin{verbatim}
+	OS 		operating system
+	JVM 	Java Virtual Machine
+	FIFO 	First In First Out
+	LIFO 	Last In First Out
+	VM 		virtual machine
+	HDFS 	Hadoop Distributed File System
+	RDD 	Resilient Distributed Dataset
+	JT 		Job Tracker
+	TT 		Task Tracker
+	RM 		Resource Manager
+	NM 		Node Manager
+	AM 		Application Master
+	NN 		Name Node
+	DN 		Data Node
+	CLC 	container launch context
+	DAG 	Directed Acyclic Graph
+	I/O 	input/output
+	LXC 	Linux Containers
+	MPI 	Message Passing Interface
+	API 	application programming interface
+	SQL 	Structured Query Language
+	vCPU 	virtual CPU
+	SSD 	Solid State Disk
+	TPC 	Transaction Processing Performance Council
+	QoS 	Quality of Service
+\end{verbatim}
