--- a/TEXT_template/FrontBackmatter/Dedication.tex
+++ b/TEXT_template/FrontBackmatter/Dedication.tex
@@ -8,7 +8,11 @@
 
 \vspace*{3cm}
 \begin{center}
-    Here you can put your dedication, like: \\ \medskip
-    To time, that do not go backwards \\ \medskip
-    --- A \& D \& E 
+	%Inserire qui la dedica \\ \medskip
+    Dedico questa tesi ai miei genitori \\ \medskip
+    A mia moglie Egidia e ai miei figli \\ \medskip
+    Fabio e Anna, che sono quanto di più prezioso \\ \medskip
+    abbia mai potuto desiderare \\ \medskip
+    %in questi anni  \\ \medskip
+    %--- A \& D \& E 
 \end{center}
