Pre-final version

--- a/TEXT_template/Davide_Master_Thesis.tex
+++ b/TEXT_template/Davide_Master_Thesis.tex
@@ -101,7 +101,7 @@
 	\cleardoublepage\include{FrontBackmatter/Acknowledgments}
 	\cleardoublepage\include{FrontBackmatter/AutoParts/Contents}
 	\cleardoublepage\include{FrontBackmatter/Abstract}
-	\cleardoublepage\include{FrontBackmatter/Estratto}
+	%\cleardoublepage\include{FrontBackmatter/Estratto}
 	%\cleardoublepage\include{FrontBackmatter/Introduction}
 	%\cleardoublepage\include{FrontBackmatter/Preface}
 
