--- a/TEXT_template/FrontBackmatter/Acknowledgments.tex
+++ b/TEXT_template/FrontBackmatter/Acknowledgments.tex
@@ -10,15 +10,14 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-Voglio ringraziare chi mi ha seguito nella stesura di questa tesi
-cioè il relatore Prof. Luciano Baresi e il correlatore Dr. Giovanni
-Quattrocchi, che si sono dimostrati disponibili, pazienti e prodighi
+Voglio ringraziare chi mi ha seguito nella preparazione e nella stesura di questa tesi, cioè il relatore Prof. Luciano Baresi e il correlatore Dr. Giovanni Quattrocchi, che si sono dimostrati disponibili, pazienti e prodighi
 di consigli. 
+
 Voglio anche ringraziare la mia famiglia: mia moglie Egidia, i miei 
-figli Fabio e Anna ai quali ho sottratto attenzioni e tempo che ho dedicato
+figli Fabio e Anna ai quali ho sottratto attenzione e tempo che ho dedicato
 allo studio. Senza il loro sacrificio e supporto non sarei sicuramente
 riuscito a concludere questo mio impegno. 
 Vi ringrazio di cuore!
-Davide
+\flushright Davide
 
 \endgroup
