--- a/TEXT_template/FrontBackmatter/Dedication.tex
+++ b/TEXT_template/FrontBackmatter/Dedication.tex
@@ -10,8 +10,9 @@
 \begin{center}
 	%Inserire qui la dedica \\ \medskip
     Dedico questa tesi ai miei genitori \\ \medskip
-    A mia moglie Egidia e ai miei figli \\ \medskip
-    Fabio e Anna, che sono quanto di più prezioso \\ \medskip
+    A mia moglie Egidia \\ \medskip
+    e ai miei figli Fabio e Anna \\ \medskip
+    che sono quanto di più meraviglioso e prezioso \\ \medskip
     abbia mai potuto desiderare \\ \medskip
     %in questi anni  \\ \medskip
     %--- A \& D \& E 
