--- a/TEXT_template/Bibliography.bib
+++ b/TEXT_template/Bibliography.bib
@@ -171,7 +171,7 @@
 
 
 @article{Baldoni:2018:SSE:3212709.3182657,
-	author = {Baldoni, Roberto and Coppa, Emilio and D\&\#x02019;elia, Daniele Cono and Demetrescu, Camil and Finocchi, Irene},
+	author = {Baldoni, Roberto and Coppa, Emilio and D'Elia, Daniele Cono and Demetrescu, Camil and Finocchi, Irene},
 	title = {A Survey of Symbolic Execution Techniques},
 	journal = {ACM Comput. Surv.},
 	issue_date = {July 2018},
