--- a/TEXT_template/Bibliography.bib
+++ b/TEXT_template/Bibliography.bib
@@ -1,3 +1,9 @@
+@misc{misc:xSparkDagsymb,
+	title = {xSparkDagsymb.},
+	url = {https://github.com/gioenn/xSpark-dagsymb.git},
+	year = {2019}
+}
+
 @misc{misc:InternetLiveStats,
 	title = {Internet Live Statisics.},
 	url = {http://www.internetlivestats.com},
