DoubleSided no odd/even different margins

--- a/TEXT_template/Davide_Master_Thesis-config.tex
+++ b/TEXT_template/Davide_Master_Thesis-config.tex
@@ -334,5 +334,8 @@
 % ****************************************************************
 
 \usepackage{classicthesis} 
-
+\usepackage[hcentering, 
+			margin=4.4cm,%]{geometry}
+			bindingoffset=4mm
+			]{geometry}
 % ****************************************************************
