--- a/TEXT_template/FrontBackmatter/AutoParts/Contents.tex
+++ b/TEXT_template/FrontBackmatter/AutoParts/Contents.tex
@@ -30,7 +30,7 @@
     \pdfbookmark[1]{\listfigurename}{lof}
     \listoffigures
 
-    \vspace*{8ex}
+    \vspace*{2ex}
 
     %*******************************************************
     % List of Tables
@@ -41,7 +41,7 @@
     \pdfbookmark[1]{\listtablename}{lot}
     \listoftables
         
-    \vspace*{8ex}
+    \vspace*{2ex}
 %   \newpage
     
     %*******************************************************
@@ -53,17 +53,18 @@
     \pdfbookmark[1]{\lstlistlistingname}{lol}
     \lstlistoflistings 
 
-    \vspace*{8ex}
+    \vspace*{2ex}
        
     %*******************************************************
     % Acronyms
     %*******************************************************
     %\phantomsection 
-    \refstepcounter{dummy}
-    \pdfbookmark[1]{Acronyms}{acronyms}
-    \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
-    \chapter*{Acronyms}
-	\input{FrontBackmatter/Acronyms}                  
+    %
+    %\refstepcounter{dummy}
+    %\pdfbookmark[1]{Acronyms}{acronyms}
+    %\markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
+    %\chapter*{Acronyms}
+	%\input{FrontBackmatter/Acronyms}                  
 \endgroup
 
 \cleardoublepage
